# rust_api

./: .env  Cargo.toml  books.db
migrations/2022-08-12-093630_create_books/: up.sql
src/: db.rs  main.rs  models.rs
