[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="1.4.8", features = ["sqlite"]}
dotenv = "0.15.0"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"